[package]
name = "Poker_VRF"
version = "0.3.0"
edition = "2021"

[lib]
name = "poker_vrf"
path = "src/lib.rs"

[[bin]]
name = "Poker_VRF"
path = "src/main.rs"

[dependencies]
hex = "0.4"
rand = "0.8"
schnorrkel = "0.11.4"   # pinned: VRF API is version-sensitive across 0.11.x
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
