[package]
name = "Poker_VRF"
version = "0.3.0"
edition = "2021"

[lib]
name = "poker_vrf"
path = "src/lib.rs"
# cdylib for wasm-pack; rlib keeps the native bin and tests building.
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "Poker_VRF"
path = "src/main.rs"

[dependencies]
hex = "0.4"
rand = "0.8"
schnorrkel = "0.11.4"   # pinned: VRF API is version-sensitive across 0.11.x
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

# wasm32 only: the browser build needs JS-backed entropy and the bindgen glue.
# `getrandom/js` is mandatory — without it schnorrkel fails to compile for
# wasm32-unknown-unknown with a bare "targets are not supported" error.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
